--- a/txt/licencjat.tex
+++ b/txt/licencjat.tex
@@ -37,7 +37,7 @@
 %kierunek: 
 % - matematyka, informacyka, ...
 % - Mathematics, Computer Science, ...
-\kierunek{bioinformatyka}
+\kierunek{bioinformatyka i biologia systemów}
 
 % informatyka - nie okreslamy zakresu (opcja zakomentowana)
 % matematyka - zakres moze pozostac nieokreslony,
@@ -70,7 +70,7 @@
 %11.0 Matematyka, Informatyka:\\ 
 %11.1 Matematyka\\ 
 %11.2 Statystyka\\ 
-11.3 Informatyka\\ 
+11.3 Informatyka, nauki komputerowe \\ 
 13.1 Biologia\\
 13.2 Fizyka
 %11.4 Sztuczna inteligencja\\ 
