--- a/txt/licencjat.tex
+++ b/txt/licencjat.tex
@@ -89,41 +89,66 @@
 % Tu jest dobre miejsce na Twoje własne makra i~środowiska:
 \newtheorem{defi}{Definicja}[section]
 
+
+\usepackage{xcolor}
+\usepackage{textcomp}
+\usepackage{listings}
+
+\lstset{ %
+  numbersep=8pt,
+  inputencoding=utf8,
+  extendedchars=\true,
+  commentstyle=\color{gray}\ttfamily,
+  backgroundcolor=\color{white},   % choose the background color; you must add \usepackage{color} or \usepackage{xcolor}; should come as last argument
+  basicstyle=\scriptsize,        % the size of the fonts that are used for the code
+  breakatwhitespace=false,         % sets if automatic breaks should only happen at whitespace
+  breaklines=true,                 % sets automatic line breaking
+  captionpos=b,                    % sets the caption-position to bottom
+  escapeinside={\%*}{*)},          % if you want to add LaTeX within your code
+  extendedchars=true,              % lets you use non-ASCII characters; for 8-bits encodings only, does not work with UTF-8
+  frame=l,	                   % adds a frame around the code
+  keepspaces=true,                 % keeps spaces in text, useful for keeping indentation of code (possibly needs columns=flexible)
+  keywordstyle=\color{blue},       % keyword style
+  language=python,                 % the language of the code
+  morekeywords={*,...},            % if you want to add more keywords to the set
+  numbers=left,                    % where to put the line-numbers; possible values are (none, left, right)
+  numbersep=5pt,                   % how far the line-numbers are from the code
+  rulecolor=\color{black},         % if not set, the frame-color may be changed on line-breaks within not-black text (e.g. comments (green here))
+  showspaces=false,                % show spaces everywhere adding particular underscores; it overrides 'showstringspaces'
+  showstringspaces=false,          % underline spaces within strings only
+  showtabs=false,                  % show tabs within strings adding particular underscores
+  stepnumber=2,                    % the step between two line-numbers. If it's 1, each line will be numbered
+  tabsize=2,	                   % sets default tabsize to 2 spaces%
+  language=python,
+  literate={ą}{{\k{a}}}1
+           {Ą}{{\k{A}}}1
+           {ę}{{\k{e}}}1
+           {Ę}{{\k{E}}}1
+           {ó}{{\'o}}1
+           {Ó}{{\'O}}1
+           {ś}{{\'s}}1
+           {Ś}{{\'S}}1
+           {ł}{{\l{}}}1
+           {Ł}{{\L{}}}1
+           {ż}{{\.z}}1
+           {Ż}{{\.Z}}1
+           {ź}{{\'z}}1
+           {Ź}{{\'Z}}1
+           {ć}{{\'c}}1
+           {Ć}{{\'C}}1
+           {ń}{{\'n}}1
+           {Ń}{{\'N}}1
+}
+
+
+
 \usepackage{polski}
-\usepackage[utf8]{inputenc}
 \usepackage{graphicx}
-%\usepackage{pythonhighlight}
 \usepackage[export]{adjustbox}
 \usepackage{float}
 \usepackage{amsmath}
 \usepackage{ucs}
-\usepackage{listingsutf8}
 
-\lstset{
-%	inputencoding=utf8x,
-%    extendedchars=\true,
-	language=python,
-	numbers=left,
-	frame=none
-    literate={ą}{{\k{a}}}1
-             {Ą}{{\k{A}}}1
-             {ę}{{\k{e}}}1
-             {Ę}{{\k{E}}}1
-             {ó}{{\'o}}1
-             {Ó}{{\'O}}1
-             {ś}{{\'s}}1
-             {Ś}{{\'S}}1
-             {ł}{{\l{}}}1
-             {Ł}{{\L{}}}1
-             {ż}{{\.z}}1
-             {Ż}{{\.Z}}1
-             {ź}{{\'z}}1
-             {Ź}{{\'Z}}1
-             {ć}{{\'c}}1
-             {Ć}{{\'C}}1
-             {ń}{{\'n}}1
-             {Ń}{{\'N}}1
-}
 
 \DeclareMathOperator{\rmsd}{RMSD}
 \DeclareMathOperator{\cov}{cov}
@@ -1080,11 +1105,9 @@ Transformations (T,R,S) Used in Computer Graphics?}, Introduction to computer gr
 %\ifftrue
 	\chapter*{Kod źródłowy}
 	\addcontentsline{toc}{chapter}{Kod źródłowy}
-%	\inputpython{../PymolVrpnPlugin.py}{0}{1000}
-	\begin{lstlisting}
-	 ala ma kota
-	 ą
-	\end{lstlisting}
+	
+	\lstinputlisting{../PymolVrpnPlugin.py}
+
 %\fi
 
 \end{document}
