--- a/txt/licencjat.tex
+++ b/txt/licencjat.tex
@@ -79,9 +79,8 @@
 }
 
 %Klasyfikacja tematyczna wedlug AMS (matematyka) lub ACM (informatyka)
-\klasyfikacja{D. Software\\
-  D.127. Blabalgorithms\\
-  D.127.6. Numerical blabalysis}
+\klasyfikacja{Applied computing $\rightarrow$
+  Life and medical sciences $\rightarrow$ Bioinformatics}
 
 % Słowa kluczowe:
 \keywords{bioinformatyka, wirtualna rzeczywistość, podobieństwo strukturalne, RNA, DNA, białka, biopolimery, dopasowanie strukturalne }
@@ -1102,13 +1101,13 @@ Transformations (T,R,S) Used in Computer Graphics?}, Introduction to computer gr
 
 \end{thebibliography}
 
-%\ifftrue
+
+%\iffalse
 	\chapter*{Kod źródłowy}
 	\addcontentsline{toc}{chapter}{Kod źródłowy}
-	
 	\lstinputlisting{../PymolVrpnPlugin.py}
-
 %\fi
+
 
 \end{document}
 \end
